--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,16 +23,16 @@ jobs:
         aws-region: us-east-1
       
       #step 3
-      # Deploy push to AWS S3
-    - name: AWS Deploy push
-      run: |
-          aws deploy push \
-          --application-name ${{ matrix.appname }} \
-          --description "This is a revision for the ${{ matrix.appname }}-${{ github.sha }}" \
-          --ignore-hidden-files \
-          --s3-location s3://${{ matrix.s3-bucket }}/${{ matrix.s3-filename }}.zip \
+#       # Deploy push to AWS S3
+#     - name: AWS Deploy push
+#       run: |
+#           aws deploy push \
+#           --application-name ${{ matrix.appname }} \
+#           --description "This is a revision for the ${{ matrix.appname }}-${{ github.sha }}" \
+#           --ignore-hidden-files \
+#           --s3-location s3://${{ matrix.s3-bucket }}/${{ matrix.s3-filename }}.zip \
           
-          --source .
+#           --source .
 
       # Step 4
     - name: Create CodeDeploy Deployment
