--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
          --deployment-group-name deploy-jhon \
          --deployment-config-name CodeDeployDefault.OneAtATime \
          --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
-         #--s3-location bucket=sasender,key=$GITHUB_SHA.zip,bundleType=zip
+         --s3-location bucket=sasender,key=$GITHUB_SHA.zip,bundleType=zip
